# mollusk

./: Cargo.toml  Makefile  README.md
.github/actions/backport/: action.yml
.github/workflows/: backport-1.18.yml  backport-2.0.yml  main.yml  publish.yml
bencher/: Cargo.toml
bencher/src/: lib.rs  result.rs
bencher/tests/: markdown.rs
cli/: Cargo.toml
cli/src/: main.rs  runner.rs
error/: Cargo.toml
error/src/: error.rs
fuzz/fixture/: Cargo.toml
fuzz/fixture-fd/: Cargo.toml
fuzz/fixture-fd/proto/: context.proto  invoke.proto  metadata.proto
fuzz/fixture-fd/src/: account.rs  context.rs  effects.rs  instr_account.rs  lib.rs  metadata.rs
fuzz/fixture/src/: account.rs  compute_budget.rs  context.rs  effects.rs  feature_set.rs  lib.rs  sysvars.rs
fuzz/fs/: Cargo.toml
fuzz/fs/src/: lib.rs
harness/: Cargo.toml
harness/benches/: ips.rs
harness/src/: account_store.rs  compile_accounts.rs  epoch_stake.rs  file.rs  instructions_sysvar.rs  lib.rs  program.rs  register_tracing.rs  sysvar.rs
harness/src/fuzz/: firedancer.rs  mod.rs  mollusk.rs
harness/tests/: account_store.rs  bpf_program.rs  custom_syscall.rs  dump_fixture.rs  epoch_stake.rs  fd_test_vectors.rs  instruction_chain.rs  instructions_sysvar.rs  precompile.rs  process_fixture.rs  register_tracing.rs  system_program.rs  transaction_instructions.rs
programs/memo/: Cargo.toml  update.sh
programs/memo/src/: memo.rs  memo_v1.rs
programs/token/: Cargo.toml  update.sh
programs/token/src/: associated_token.rs  token.rs  token2022.rs
result/: Cargo.toml
result/src/: check.rs  compare.rs  config.rs  fuzz.rs  types.rs
test-programs/cpi-target/: Cargo.toml
test-programs/cpi-target/src/: lib.rs
test-programs/custom-syscall/: Cargo.toml
test-programs/custom-syscall/src/: lib.rs
test-programs/epoch-stake/: Cargo.toml
test-programs/epoch-stake/src/: lib.rs
test-programs/instructions-sysvar/: Cargo.toml
test-programs/instructions-sysvar/src/: lib.rs
test-programs/primary/: Cargo.toml
test-programs/primary/src/: lib.rs
