[workspace]
members = [
    "bencher",
    "cli",
    "error",
    "fuzz/*",
    "harness",
    "programs/*",
    "result",
    "test-programs/*",
]
resolver = "2"

[workspace.package]
authors = ["Trezoa-team Technology Maintainers <maintainers@trezoa.xyz>"]
repository = "https://github.com/trezoa-xyz/mollusk"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
version = "0.10.0"

[workspace.dependencies]
trezoa-feature-set = "3.1.0"
trezoa-precompiles = "3.1.0"
trezoa-syscalls = "3.1.0"
bincode = "1.3.3"
bs58 = "0.5.1"
chrono = "0.4.42"
clap = "4.5.51"
criterion = "0.7.0"
hex = "0.4.3"
ed25519-dalek = "=1.0.1"
libsecp256k1 = "0.6.0"
mollusk-svm = { path = "harness", version = "0.10.0" }
mollusk-svm-bencher = { path = "bencher", version = "0.10.0" }
mollusk-svm-cli = { path = "cli", version = "0.10.0" }
mollusk-svm-error = { path = "error", version = "0.10.0" }
mollusk-svm-fuzz-fixture = { path = "fuzz/fixture", version = "0.10.0" }
mollusk-svm-fuzz-fixture-firedancer = { path = "fuzz/fixture-fd", version = "0.10.0" }
mollusk-svm-fuzz-fs = { path = "fuzz/fs", version = "0.10.0" }
mollusk-svm-programs-memo = { path = "programs/memo", version = "0.10.0" }
mollusk-svm-result = { path = "result", version = "0.10.0" }
mollusk-svm-programs-token = { path = "programs/token", version = "0.10.0" }
num-format = "0.4.4"
openssl = "0.10.74"
prost = "0.9"
prost-build = "0.9"
prost-types = "0.9"
rand0-7 = { package = "rand", version = "0.7" }
rayon = "1.10.0"
serde = "1.0.203"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
serial_test = "2.0"
sha2 = "0.10.9"
trezoa-account = "3.2.0"
trezoa-account-info = "3.0"
trezoa-bpf-loader-program = "3.1.0"
trezoa-clock = "3.0"
trezoa-compute-budget = "3.1.0"
trezoa-cpi = "3.0"
trezoa-ed25519-program = "3.0"
trezoa-epoch-rewards = "3.0"
trezoa-epoch-schedule = "3.0"
trezoa-hash = "3.1.0"
trezoa-instruction = "3.0"
trezoa-instruction-error = { version = "2.0", features = ["serde"] }
trezoa-instructions-sysvar = "3.0"
trezoa-keccak-hasher = { version = "3.0", features = ["sha3"] }
trezoa-loader-v3-interface = "6.1.0"
trezoa-loader-v4-interface = "3.1.0"
trezoa-loader-v4-program = "3.1.0"
trezoa-logger = "3.0"
trezoa-message = "3.0.1"
trezoa-native-token = "3.0"
trezoa-precompile-error = "3.0"
trezoa-program-entrypoint = "3.1.0"
trezoa-program-error = "3.0"
trezoa-program-pack = "3.0"
trezoa-program-runtime = "3.0"
trezoa-pubkey = "4.0"
trezoa-rent = "3.0"
trezoa-sdk-ids = "3.0"
trezoa-secp256k1-program = "3.0"
trezoa-secp256r1-program = "3.0"
trezoa-slot-hashes = "3.0"
trezoa-stake-interface = "2.0.1"
trezoa-svm-callback = "3.1.0"
trezoa-svm-log-collector = "3.1.0"
trezoa-svm-timings = "3.1.0"
trezoa-svm-transaction = "3.0.0"
trezoa-system-interface = "2.0"
trezoa-system-program = "3.1.0"
trezoa-sysvar = "3.0"
trezoa-sysvar-id = "3.0"
trezoa-transaction-context = "3.1.0"
trezoa-transaction-error = "3.0.0"
trezoa-transaction-status-client-types = "3.1.4"
trezoa-vote-program = "3.1.0"
trezoa-zk-elgamal-proof-program = "3.1.0"
spl-associated-token-account-interface = "2.0.0"
tpl-token-interface = "2.0.0"
thiserror = "1.0.64"
tokio = "1.37.0"
which = "=4.4.0"
