[package]
name = "mollusk-svm-bencher"
description = "SVM program bench harness."
documentation = "https://docs.rs/mollusk-svm-bencher"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file ={ workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
chrono = { workspace = true }
num-format = { workspace = true }
serde_json = { workspace = true }
mollusk-svm = { workspace = true }
trezoa-account = { workspace = true }
trezoa-instruction = { workspace = true }
trezoa-pubkey = { workspace = true }

[dev-dependencies]
trezoa-logger = { workspace = true }
