[package]
name = "mollusk-svm-cli"
description = "Mollusk CLI."
documentation = "https://docs.rs/mollusk-svm-cli"
authors = { workspace = true }
repository = { workspace = true }
license-file ={ workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
mollusk-svm-bencher = { workspace = true }
mollusk-svm-fuzz-fixture = { workspace = true }
mollusk-svm-fuzz-fixture-firedancer = { workspace = true }
mollusk-svm = { workspace = true, features = ["fuzz", "fuzz-fd", "serde"] }
trezoa-logger = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-sdk-ids = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "mollusk"
path = "src/main.rs"
