[package]
name = "mollusk-svm-error"
description = "Errors thrown by the Mollusk SVM harness."
documentation = "https://docs.rs/mollusk-svm-error"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file ={ workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
trezoa-pubkey = { workspace = true }
thiserror = { workspace = true }
