[package]
name = "mollusk-svm"
description = "SVM program test harness."
documentation = "https://docs.rs/mollusk-svm"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file ={ workspace = true }
edition = { workspace = true }
version = { workspace = true }

[features]
default = []
all-builtins = [
    "dep:trezoa-loader-v4-program",
    "dep:trezoa-vote-program",
    "dep:trezoa-zk-elgamal-proof-program",
]
fuzz = [
    "dep:mollusk-svm-fuzz-fixture",
    "dep:mollusk-svm-fuzz-fs",
    "mollusk-svm-result/fuzz",
]
fuzz-fd = [
    "dep:mollusk-svm-fuzz-fixture-firedancer",
    "dep:mollusk-svm-fuzz-fs",
]
inner-instructions = [
    "mollusk-svm-result/inner-instructions",
    "dep:trezoa-transaction-status-client-types",
]
invocation-inspect-callback = []
precompiles = ["dep:trezoa-precompiles"]
register-tracing = [
    "invocation-inspect-callback",
    "dep:hex",
    "dep:sha2"
]
serde = [
    "dep:serde",
    "mollusk-svm-result/serde",
]

[dependencies]
trezoa-feature-set = { workspace = true, features = ["trezoa-unstable-api"] }
trezoa-precompiles = { workspace = true, features = ["trezoa-unstable-api"], optional = true }
trezoa-syscalls = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
mollusk-svm-error = { workspace = true }
mollusk-svm-fuzz-fixture = { workspace = true, optional = true }
mollusk-svm-fuzz-fixture-firedancer = { workspace = true, optional = true }
mollusk-svm-fuzz-fs = { workspace = true, optional = true }
mollusk-svm-result = { workspace = true }
sha2 = { workspace = true, optional = true }
trezoa-account = { workspace = true }
trezoa-bpf-loader-program = { workspace = true, features = ["trezoa-unstable-api"] }
trezoa-clock = { workspace = true }
trezoa-compute-budget = { workspace = true, features = ["trezoa-unstable-api"] }
trezoa-epoch-rewards = { workspace = true }
trezoa-epoch-schedule = { workspace = true }
trezoa-hash = { workspace = true }
trezoa-instruction = { workspace = true }
trezoa-instruction-error = { workspace = true, features = ["serde"] }
trezoa-instructions-sysvar = { workspace = true }
trezoa-loader-v3-interface = { workspace = true, features = ["serde"] }
trezoa-loader-v4-interface = { workspace = true }
trezoa-loader-v4-program = { workspace = true, features = ["trezoa-unstable-api"], optional = true }
trezoa-logger = { workspace = true }
trezoa-message = { workspace = true }
trezoa-precompile-error = { workspace = true }
trezoa-program-error = { workspace = true }
trezoa-program-runtime = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-rent = { workspace = true }
trezoa-sdk-ids = { workspace = true }
trezoa-slot-hashes = { workspace = true }
trezoa-stake-interface = { workspace = true }
trezoa-svm-callback = { workspace = true }
trezoa-svm-log-collector = { workspace = true }
trezoa-svm-timings = { workspace = true }
trezoa-svm-transaction = { workspace = true }
trezoa-system-program = { workspace = true, features = ["trezoa-unstable-api"] }
trezoa-sysvar = { workspace = true }
trezoa-sysvar-id = { workspace = true }
trezoa-transaction-context = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-transaction-error = { workspace = true }
trezoa-transaction-status-client-types = { workspace = true, features = ["trezoa-unstable-api"], optional = true }
trezoa-vote-program = { workspace = true, features = ["trezoa-unstable-api"], optional = true }
trezoa-zk-elgamal-proof-program = { workspace = true, features = ["trezoa-unstable-api"], optional = true }

[dev-dependencies]
criterion = { workspace = true }
ed25519-dalek = { workspace = true }
libsecp256k1 = { workspace = true }
openssl = { workspace = true }
rand0-7 = { workspace = true }
rayon = { workspace = true }
serial_test = { workspace = true }
trezoa-ed25519-program = { workspace = true }
trezoa-native-token = { workspace = true }
trezoa-secp256k1-program = { workspace = true, features = ["bincode"] }
trezoa-secp256r1-program = { workspace = true }
trezoa-system-interface = { workspace = true }

[[bench]]
name = "ips"
harness = false
