[package]
name = "mollusk-svm-result"
description = "SVM program execution results and validation."
documentation = "https://docs.rs/mollusk-svm-result"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file ={ workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
mollusk-svm-fuzz-fixture = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
trezoa-account = { workspace = true }
trezoa-instruction = { workspace = true }
trezoa-message = { workspace = true, optional = true }
trezoa-program-error = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-rent = { workspace = true }
trezoa-transaction-error = { workspace = true }
trezoa-transaction-status-client-types = { workspace = true, optional = true }

[features]
default = []
fuzz = ["dep:mollusk-svm-fuzz-fixture"]
inner-instructions = ["dep:trezoa-message", "dep:trezoa-transaction-status-client-types"]
serde = ["dep:serde", "trezoa-pubkey/serde"]
