[package]
name = "mollusk-svm-fuzz-fixture-firedancer"
description = "Mollusk-compatible Firedancer fuzz fixture for SVM programs."
documentation = "https://docs.rs/mollusk-svm-fuzz-fixture-firedancer"
authors = { workspace = true }
repository = { workspace = true }
license-file ={ workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
trezoa-feature-set = { workspace = true }
mollusk-svm-fuzz-fs = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
trezoa-account = { workspace = true }
trezoa-keccak-hasher = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-transaction-context = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
which = { workspace = true }
