[package]
name = "mollusk-svm-fuzz-fixture"
description = "Mollusk-compatible fuzz fixture for SVM programs."
documentation = "https://docs.rs/mollusk-svm-fuzz-fixture"
authors = { workspace = true }
repository = { workspace = true }
license-file ={ workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
trezoa-feature-set = { workspace = true }
mollusk-svm-fuzz-fs = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
trezoa-account = { workspace = true }
trezoa-clock = { workspace = true }
trezoa-compute-budget = { workspace = true, features = ["trezoa-unstable-api"] }
trezoa-epoch-rewards = { workspace = true }
trezoa-epoch-schedule = { workspace = true }
trezoa-hash = { workspace = true }
trezoa-instruction = { workspace = true }
trezoa-keccak-hasher = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-rent = { workspace = true }
trezoa-slot-hashes = { workspace = true }
trezoa-stake-interface = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
which = { workspace = true }
