[package]
name = "mollusk-svm-programs-token"
description = "SVM program SPL Token."
documentation = "https://docs.rs/mollusk-svm-programs-token"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file ={ workspace = true }
edition = { workspace = true }
version = { workspace = true }

[features]
default = ["token", "associated-token", "token-2022"]
token = []
associated-token = ["dep:spl-associated-token-account-interface"]
token-2022 = []

[dependencies]
mollusk-svm = { workspace = true }
trezoa-account = { workspace = true }
trezoa-program-pack = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-rent = { workspace = true }
tpl-token-interface = { workspace = true }
spl-associated-token-account-interface = { workspace = true, optional = true  }
