[package]
name = "test-program-cpi-target"
version = "0.1.0"
edition = "2021"

[dependencies]
trezoa-account-info = { workspace = true }
trezoa-program-entrypoint = { workspace = true }
trezoa-program-error = { workspace = true }
trezoa-pubkey = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(feature, values("custom-heap", "custom-panic"))',
    'cfg(target_os, values("trezoa"))',
]

