[package]
name = "test-program-primary"
version = "0.1.0"
edition = "2021"

[dependencies]
trezoa-account-info = { workspace = true }
trezoa-cpi = { workspace = true }
trezoa-instruction = { workspace = true }
trezoa-program-entrypoint = { workspace = true }
trezoa-program-error = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-sdk-ids = { workspace = true }
trezoa-system-interface = { workspace = true, features = ["bincode"] }

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(feature, values("custom-heap", "custom-panic"))',
    'cfg(target_os, values("trezoa"))',
]

